# 16-bus

./: .env  .env.example  GEMINI.md  Makefile  README.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml
.busctl/: session.json
16_bus_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
alembic/: README  env.py
alembic/versions/: 1273ba2cc8fb_add_telemetry_locations.py  20260413_2148_0001_initial_schema.py  20260413_2149_0002_seed_reference_data.py  20260413_2215_0003_add_payments.py  20260413_2235_0004_add_qr_tokens.py  20260414_0105_0005_harden_integrity_and_events.py  20260414_1200_0006_harden_trip_and_telemetry_links.py  20260416_0001_0007_add_audit_rank_policy_and_postgis.py  20260417_0008_make_rank_ticket_trip_nullable.py  6442d3b6b983_add_users_and_organizations.py  79b4ec72ad65_add_compliance_boardings.py  95b0c3305cc9_add_vehicles_drivers_shifts.py  b378061eb2f0_harden_trips_and_routes.py
app/: __init__.py  dependencies.py  main.py
app/api/: deps.py  router.py
app/application/: __init__.py  base.py  container.py  context.py  services.py
app/cli/: __init__.py  main.py  output.py  runtime.py  session.py
app/core/: __init__.py  audit.py  bootstrap.py  cache.py  config.py  database.py  events.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  security.py
app/domain/: README.md  __init__.py  events.py
app/integrations/: maps_provider.py  payments_provider.py  (+2 more)
docs/: deep-research-report.md  software-architecture.md
tests/: conftest.py  test_application_services.py  test_architecture_repairs.py  test_auth.py  test_booking_invariants.py  test_bookings.py  test_cli_smoke.py  test_dispatch_board.py  test_health.py  test_ops.py  test_organizations.py  test_queue_flow.py  test_trip_state_transitions.py  test_tui.py
typer/: __init__.py  testing.py
web/: package-lock.json  package.json
(+125 files in other folders)
